Fixed some dark mode issues

--- a/public/css/theme_base.css
+++ b/public/css/theme_base.css
@@ -118,6 +118,8 @@ dd a,
 :not(a) > h3,
 .fc-col-header-cell-cushion,
 tr.fc-list-event > td,
+.reveal-modal p,
+.reveal-modal h2,
 select {
     color: var(--theme-text) !important;
 }
